<resources>
    <string name="app_name">London Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="places">Places</string>
    <string name="photo_item">Photo item</string>
    <string name="photos">Photos</string>
    <string name="click_to_enlarge">(click to enlarge)</string>
    <string name="details">Details</string>
    <string name="explore">Explore</string>
    <string name="call">Call</string>
    <string name="visit_website">Visit website</string>
    <string name="find">Find</string>
</resources>
