<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/details"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/place_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            tools:text="Hyde Park is one of the largest parks in Central London, and one of the Royal Parks of London." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/explore"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/place_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/location"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="4dp"
            android:text="@string/find"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/place_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/call"
            android:drawableLeft="@drawable/call"
            android:drawablePadding="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="4dp"
            android:text="@string/call"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/place_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/internet"
            android:drawableLeft="@drawable/internet"
            android:drawablePadding="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="4dp"
            android:text="@string/visit_website"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/photos"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/click_to_enlarge" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/place_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>